[workspace]
resolver = "2"
members = [
    "bin/agent",
    "bin/ctd-decoder",
    "crates/logging",
    "crates/vsock-exporter",
]

[workspace.dependencies]
anyhow = "1.0"
arc-swap = "1.5.0"
async-compression = "0.4.22"
async-trait = "0.1.50"
base64 = "0.22.1"
bincode = "1.3.3"
byteorder = "1.4.3"
clap = { version = "4.5", features = ["derive"] }
const_format = "0.2.34"
futures = "0.3.30"
jsonwebkey = "0.3"
lazy_static = "1.3.0"
libc = "0.2.94"
log = "0.4.11"
logging = { path = "crates/logging" }

nix = { version = "0.26.4", features = ["fs"] }
oci-client = "0.15"
ocicrypt-rs = { git = "https://github.com/confidential-containers/guest-components", rev = "7f342e1a80828c9aceb3282fe58eda4e7051edc6", features = [
    "keywrap-jwe",
    "keywrap-keyprovider-ttrpc",
    "keywrap-keyprovider-grpc",
] }
opentelemetry = { version = "0.14.0", features = ["rt-tokio-current-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"
sha2 = "0.10.8"
# slog:
# - Dynamic keys required to allow HashMap keys to be slog::Serialized.
# - The 'max_*' features allow changing the log level at runtime
#   (by stopping the compiler from removing log calls).
slog = { version = "2.5.2", features = [
    "dynamic-keys",
    "max_level_trace",
    "release_max_level_debug",
] }
slog-async = "2.7.0"
slog-journald = "2.2.0"
slog-json = "2.4.0"
slog-scope = "4.4.0"
slog-stdlog = "4.0.0"
slog-term = "2.9.1"
strum = "0.26.2"
strum_macros = "0.26.2"
thiserror = "2.0.16"
tokio = { version = "1.46.1", features = ["full"] }
tokio-vsock = "0.3.4"
toml = "0.5.8"
tracing = "0.1.41"
tracing-opentelemetry = "0.13.0"
tracing-subscriber = "0.2.18"
vsock-exporter = { path = "crates/vsock-exporter" }
walkdir = "2.5.0"

[profile.release]
debug = true
