[package]
name = "vsock-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
byteorder.workspace = true
tokio.workspace = true
tokio-vsock.workspace = true
libc.workspace = true
slog = { workspace = true, features = [
    "dynamic-keys",
    "max_level_trace",
    "release_max_level_debug",
] }
thiserror.workspace = true
bincode.workspace = true
opentelemetry = { workspace = true, features = ["serialize"] }
